study/k8s/yaml/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '15'
  creationTimestamp: '2021-06-07T06:10:15Z'
  generation: 29
  labels:
    app: topic-api
  name: topic-api
  namespace: topic-go
  resourceVersion: '1190053866'
  selfLink: /apis/apps/v1/namespaces/topic-go/deployments/topic-api
  uid: 0d79ff03-61fe-45d8-bbec-7e0785f0ccb2
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: topic-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        redeploy-timestamp: '1623734620968'
      labels:
        app: topic-api
    spec:
      containers:
        - env:
            - name: NACOS_HOST
              value: 'xxx:8848'
          image: 'harbor.xxx.com/topic-go/topic-api:v1.0.5'
          imagePullPolicy: Always
          name: topic-api
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/logs
              name: volume-topic-api-filebeat
            - mountPath: /etc/localtime
              name: volume-localtime
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: volume-topic-api-filebeat
          persistentVolumeClaim:
            claimName: topic-api-filebeat
        - hostPath:
            path: /etc/localtime
            type: ''
          name: volume-localtime
status:
  availableReplicas: 3
  conditions:
    - lastTransitionTime: '2021-06-10T00:16:08Z'
      lastUpdateTime: '2021-06-10T00:16:08Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
    - lastTransitionTime: '2021-06-07T06:10:15Z'
      lastUpdateTime: '2021-06-15T05:23:47Z'
      message: ReplicaSet "topic-api-5bf6c9846d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
  observedGeneration: 29
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
